Fix collapsable nav and links. Working slider.

--- a/static/styles/styleFile.css
+++ b/static/styles/styleFile.css
@@ -1,7 +1,3 @@
-#mainTable {
-    max-height: 4rem !important;
-    overflow: scroll;
-}
 
 label{
     margin-left: 2rem !important;
@@ -9,4 +5,19 @@ label{
 
 .addMargin{
     margin-top: 2rem;
+}
+
+.addMarginD{
+    margin-top: 4rem;
+}
+
+/*For sticky footer*/
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+main {
+    flex: 1 0 auto;
 }
